# toolbox

./: +FUNCTIONALITY.md  .gitignore  CMakeLists.txt  LICENSE  README.md  config.cpp  config.hpp  config.json  config.yaml  config.yml  config_editor_frame.cpp  config_editor_frame.hpp  config_editor_frame.ui  global_hotkeys.cpp  global_hotkeys.hpp  hacks.cpp  hacks.hpp  hacks_dpi_scaling.cpp  hacks_dpi_scaling.hpp  hotkeys.cpp  hotkeys.hpp  keymap.cpp  keymap.hpp  main.cpp  resources.qrc  toolbox.cpp  toolbox.hpp  tray.cpp  tray.hpp  tray_icon.cpp  tray_icon.hpp  vcpkg.json  webview_frame.cpp  webview_frame.hpp  webview_frame.ui  window_management.cpp  window_management.hpp  windowmgr.cpp  windowmgr.hpp  workspaces.cpp  (+1 more)
